export const snapshot = {};

snapshot[`someCall() 1`] = `
{
  args: [
  ],
  line: "",
  name: "someCall",
  type: "parsed",
}
`;

snapshot[`someCall('a', 111) 1`] = `
{
  args: [
    "a",
    111,
  ],
  line: "",
  name: "someCall",
  type: "parsed",
}
`;

snapshot[`someCall('a \\'ha\\'', 111) 1`] = `
{
  args: [
    "a 'ha'",
    111,
  ],
  line: "",
  name: "someCall",
  type: "parsed",
}
`;

snapshot[`someCall(\`a\`, 111) 1`] = `
{
  args: [
    "a",
    111,
  ],
  line: "",
  name: "someCall",
  type: "parsed",
}
`;

snapshot[`someCall(\`a \\\`ha\\\`\`, 111) 1`] = `
{
  args: [
    "a \`ha\`",
    111,
  ],
  line: "",
  name: "someCall",
  type: "parsed",
}
`;

snapshot[`someCall("a", 111) 1`] = `
{
  args: [
    "a",
    111,
  ],
  line: "",
  name: "someCall",
  type: "parsed",
}
`;

snapshot[`someCall("a \\"ha\\"", 111) 1`] = `
{
  args: [
    'a "ha"',
    111,
  ],
  line: "",
  name: "someCall",
  type: "parsed",
}
`;

snapshot[`someCall("a", 111,true) 1`] = `
{
  args: [
    "a",
    111,
    true,
  ],
  line: "",
  name: "someCall",
  type: "parsed",
}
`;

snapshot[`someCall("a", 111, false) 1`] = `
{
  args: [
    "a",
    111,
    false,
  ],
  line: "",
  name: "someCall",
  type: "parsed",
}
`;

snapshot[`someCall("a false true 123 b", 111, false) 1`] = `
{
  args: [
    "a false true 123 b",
    111,
    false,
  ],
  line: "",
  name: "someCall",
  type: "parsed",
}
`;

snapshot[`someCall(-123) 1`] = `
{
  args: [
    -123,
  ],
  line: "",
  name: "someCall",
  type: "parsed",
}
`;

snapshot[`some_call() 1`] = `
{
  args: [
  ],
  line: "",
  name: "some_call",
  type: "parsed",
}
`;

snapshot[`some-call() 1`] = `
{
  args: [
  ],
  line: "",
  name: "some-call",
  type: "parsed",
}
`;

snapshot[`SOMECALL() 1`] = `
{
  args: [
  ],
  line: "",
  name: "SOMECALL",
  type: "parsed",
}
`;

snapshot[`malformed("a" 1`] = `"<END-OF-FILE>: Unable to consume token: <END-OF-FILE>"`;

snapshot[`someCall(-123.500) 1`] = `
{
  args: [
    -123.5,
  ],
  line: "",
  name: "someCall",
  type: "parsed",
}
`;

snapshot[`testing blah 1`] = `'{"index":8,"rowBegin":1,"columnBegin":9,"rowEnd":1,"columnEnd":13}: Unable to consume token: blah'`;

snapshot[`empty string 1`] = `"<END-OF-FILE>: Unable to consume token: <END-OF-FILE>"`;
